--- a/InternetProgrammingProject/appsettings.json
+++ b/InternetProgrammingProject/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SignupDb; Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SignupDb; Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SecondConnection": "Server=(localdb)\\mssqllocaldb;Database=TaskDb; Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ThirdConnection": "Server=(localdb)\\mssqllocaldb;Database=ResourceDb; Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
